fix navbar spacing

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -66,8 +66,8 @@ p, li
 
 .navbar li
   float left
-  padding-left 0
-  padding-right 3em
+  padding-left 1em
+  padding-right 2em
 
 .navbar a 
   text-decoration none
